# AOC

./: AOC.csproj  AOC.sln  AOC2021.csproj  AOC2021.sln  CMakeLists.txt  Program.cs  README.md  Solutions.csproj
.github/workflows/: main.yml
AOC2015/Day01/: Day01.cs
AOC2015/Day02/: Day02.cs
AOC2015/Day03/: Day03.cs
AOC2015/Day04/: Day04.cs
AOC2015/Day05/: Day05.cs
AOC2015/Day06/: Day06.cs
AOC2022/: AOC2022.csproj
Common/: ArrayExtension.cs  Common.csproj  MathUtil.cs  SolutionClassAttribute.cs  SolutionMethodAttribute.cs  Solver.cs  StringHelper.cs
Day01/: Day01Solution.cs  Day01Test.cs
Day02/: Day02Solution.cs  Day02Test.cs
Day03/: Day03Solution.cs  Day03Test.cs
Day04/: Day04Solution.cs  Day04Test.cs
Day05/: Day05Solution.cs  Day05Test.cs
Day06/: Day06Solution.cs  Day06Test.cs
Day07/: Day07Solution.cs  Day07Test.cs
Day08/: Day08Solution.cs  Day08Test.cs
Day09/: Day09Solution.cs  Day09Test.cs
Day10/: Day10Solution.cs  Day10Test.cs
Day11/: Day11Solution.cs  Day11Test.cs
Day12/: Day12Solution.cs  Day12Test.cs
Day13/: Day13Solution.cs  Day13Test.cs
Day14/: Day14Solution.cs  Day14Test.cs
Day15/: Day15Solution.cs  Day15Test.cs
Day16/: Day16Solution.cs  Day16Test.cs
Day17/: Day17Solution.cs  Day17Test.cs
Day18/: Day18Solution.cs  Day18Test.cs
Day19/: Day19Solution.cs  Day19Test.cs
Day20/: Day20Solution.cs  Day20Test.cs
Day21/: Day21Solution.cs  Day21Test.cs
Day22/: Day21Solution.cs  Day21Test.cs
Day23/: Day23Solution.cs  Day23Test.cs
Day24/: Day24Solution.cs  Day24Test.cs
Day25/: Day25Solution.cs  Day25Test.cs
(+107 files in other folders)
