cmake_minimum_required(VERSION 3.8)

PROJECT(AOC2021 LANGUAGES CSharp)
set(CMAKE_CSharp_FLAGS "/langversion:10")

include(CSharpUtilities)

set(FRAMEWORK_VERSION "v4.8")

file(GLOB SRC_CORE CONFIGURE_DEPENDS Common/*.cs)
file(GLOB SRC_SOLUTIONS CONFIGURE_DEPENDS Day*/*Solution.cs)
file(GLOB SRC_RESOURCES CONFIGURE_DEPENDS Day*/*.txt)
file(GLOB SRC_TEST CONFIGURE_DEPENDS Day*/*Test.cs)

add_library(Solutions SHARED ${SRC_CORE} ${SRC_SOLUTIONS} ${SRC_RESOURCES} ${SRC_TEST})

SET_SOURCE_FILES_PROPERTIES(${SRC_RESOURCES} PROPERTIES VS_TOOL_OVERRIDE "None")
SET_SOURCE_FILES_PROPERTIES(${SRC_RESOURCES} PROPERTIES VS_COPY_TO_OUT_DIR "PreserveNewest")

set_property(TARGET Solutions PROPERTY VS_DOTNET_REFERENCES
	"System"
	"Microsoft.VisualStudio.QualityTools.UnitTestFramework"
)

set_target_properties(Solutions
	PROPERTIES
	VS_GLOBAL_PROJECT_TYPES "{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
)

set_property(TARGET Solutions PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION ${FRAMEWORK_VERSION})

add_executable(AOC2021 Program.cs)
target_link_libraries(AOC2021 Solutions)

set_property(TARGET AOC2021 PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION ${FRAMEWORK_VERSION})
